--- a/Project.toml
+++ b/Project.toml
@@ -3,11 +3,17 @@ uuid = "67cfb5bc-e6ea-430f-a6af-2fbcf34513da"
 authors = ["Brian D. Klahn <briandk@virginia.edu> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+URIs = "5c2747f8-b7ea-4ff2-ba2e-563bfd36b1d4"
+
 [compat]
 julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+URIs = "5c2747f8-b7ea-4ff2-ba2e-563bfd36b1d4"
 
 [targets]
-test = ["Test"]
+test = ["Test", "URIs"]
